crates/bin/cairo-metrics/benchmarks/openzeppelin/project/packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__basic_types_enum.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub enum MyEnum {
    Variant1: felt252,
    Variant2: ClassHash,
    Variant3: ContractAddress,
    Variant4: u128,
    Variant5: i128,
    #[snip12(kind: "shortstring")]
    Variant6: felt252,
    #[snip12(kind: "timestamp")]
    Variant7: u128,
    #[snip12(kind: "selector")]
    Variant8: felt252,
}
pub fn __MY_ENUM_encoded_type() {
    println!(
        "\"MyEnum\"(\"Variant1\"(\"felt\"),\"Variant2\"(\"ClassHash\"),\"Variant3\"(\"ContractAddress\"),\"Variant4\"(\"u128\"),\"Variant5\"(\"i128\"),\"Variant6\"(\"shortstring\"),\"Variant7\"(\"timestamp\"),\"Variant8\"(\"selector\"))",
    );
}
pub const MY_ENUM_TYPE_HASH: felt252 =
    0x20bdb2f120712368f7f1f5ae994dd6eeca74408fceaad716c369245c33a8897;



Diagnostics:

None

AuxData:

None
